--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ black = "^24.2.0"
 pylint = "^3.1.0"
 isort = "^5.13.2"
 pre-commit = "^3.6.2"
+pytest = "^8.1.1"
+loguru = "^0.7.2"
 
 
 [build-system]
