added test suite

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,10 +7,16 @@ repos:
       - id: black
         language_version: python3.12
   - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v1.4.0
+    rev: v1.9.0
     hooks:
       - id: mypy
+        args:
+          [
+            --explicit-package-bases,
+            --ignore-missing-imports
+          ]
+        files: delta_tables/
   - repo: https://github.com/pycqa/isort
-    rev: 5.12.0
+    rev: 5.13.2
     hooks:
       - id: isort
